2021年 5月22日 土曜日 16時23分17秒 JST

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
+title: Fumitaka Hoshino
+author: Fumitaka Hoshino Professor, PhD. University of Nagasaki, Faculty of Information Security
 theme: jekyll-theme-cayman
-name: Fumitaka Hoshino Professor, PhD. University of Nagasaki, Faculty of Information Security
