2021年 5月22日 土曜日 19時55分45秒 JST

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
-title: Fumitaka Hoshino
-author: Fumitaka Hoshino Professor, PhD. University of Nagasaki, Faculty of Information Security
+title: List of Publications (Fumitaka Hoshino)
 theme: jekyll-theme-cayman
