--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
-title: List of Publications (Fumitaka Hoshino)
-remote_theme: Hammie217/LatexJekyll
+title: List of Publications
+subtitle: Fumitaka Hoshino
+remote_theme: daattali/beautiful-jekyll
