2021年 5月22日 土曜日 22時14分04秒 JST

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
-title: List of Publications
-subtitle: Fumitaka Hoshino
+title: List of Publications (Fumitaka Hoshino)
 remote_theme: daattali/beautiful-jekyll
