--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 title: List of Publications (Fumitaka Hoshino)
+footer-extra: List of Publications (Fumitaka Hoshino)
 remote_theme: daattali/beautiful-jekyll
