--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: List of Publications (Fumitaka Hoshino)
-footer-extra: List of Publications (Fumitaka Hoshino)
+title: Publication List (Fumitaka Hoshino)
+footer: Publication List (Fumitaka Hoshino)
 remote_theme: daattali/beautiful-jekyll
