--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Publication List (Fumitaka Hoshino)
-footer: Publication List (Fumitaka Hoshino)
+author: Fumitaka Hoshino
 remote_theme: daattali/beautiful-jekyll
