--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Publication List (Fumitaka Hoshino)
 author: Fumitaka Hoshino
-# theme:
+theme: jekyll-theme-tactile
 lsi: false
 safe: true
 source: fhoshino52/fhoshino52.github.io
