2021年 5月23日 日曜日 19時49分01秒 JST

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Publication List (Fumitaka Hoshino)
-author: Fumitaka Hoshino
+description: University of Nagasaki
 theme: jekyll-theme-tactile
 lsi: false
 safe: true
