--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Publication List (Fumitaka Hoshino)
 description: University of Nagasaki
-theme: jekyll-theme-tactile
+theme: jekyll-theme-hacker
 lsi: false
 safe: true
 source: fhoshino52/fhoshino52.github.io
