2021年 5月23日 日曜日 19時51分51秒 JST

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Publication List (Fumitaka Hoshino)
-description: University of Nagasaki
+title: Publication List 
+description: Fumitaka Hoshino
 theme: jekyll-theme-hacker
 lsi: false
 safe: true
