--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Publication List 
 description: Fumitaka Hoshino
-theme: jekyll-theme-hacker
+theme: jekyll-theme-modernist
 lsi: false
 safe: true
 source: fhoshino52/fhoshino52.github.io
