2021年 5月23日 日曜日 19時57分36秒 JST

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Publication List 
 description: Fumitaka Hoshino
-theme: jekyll-theme-modernist
+theme: jekyll-theme-minimal
 lsi: false
 safe: true
 source: fhoshino52/fhoshino52.github.io
