--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 title: Publication List 
 description: Fumitaka Hoshino
 theme: jekyll-theme-minimal
-lsi: false
-safe: true
-source: fhoshino52/fhoshino52.github.io
-incremental: false
-highlighter: rouge
-gist:
-  noscript: false
-kramdown:
-  math_engine: mathjax
-  syntax_highlighter: rouge
+# lsi: false
+# safe: true
+# source: fhoshino52/fhoshino52.github.io
+# incremental: false
+# highlighter: rouge
+# gist:
+#   noscript: false
+# kramdown:
+#   math_engine: mathjax
+#   syntax_highlighter: rouge
