--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Publication List 
 description: Fumitaka Hoshino
-theme: jekyll-theme-minimal
+theme: minima
 # lsi: false
 # safe: true
 # source: fhoshino52/fhoshino52.github.io
