Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Publication List (Fumitaka Hoshino)
 description: University of Nagasaki
-theme: minima
+theme: jekyll-theme-cayman
 lsi: false
 safe: true
 source: fhoshino52/fhoshino52.github.io
